# GEANT4_TFG

./: .gitignore  README.md  compress.sh  run_all.sh  run_all_article.sh
aplicacion1/: main.cc
aplicacion2/: main.cc
aplicacion2/geometry/: v3-worldVOLpinza.gdml
aplicacion2/memoria/: memoria_10000_neutron_5MeV.out
aplicacion2/resultados/: tiempoejecucion.csv
aplicacion2/src/: PrimaryGenAction.cc  SteppingAction.cc
aplicacion3/: CMakeLists.txt  README.md  run.sh
aplicacion3/include/: DetConstruction.hh  PrimaryGenAction.hh  SensitiveDetector.hh
aplicacion3/input/: input.csv
aplicacion3/mac_files/: run_batch.mac
aplicacion3/src/: ActionInit.cc  DetConstruction.cc  PrimaryGenAction.cc  SensitiveDetector.cc  SteppingAction.cc
aplicacion4/: run.sh
aplicacion4/include/: SensitiveDetector.hh
aplicacion4/src/: PrimaryGenAction.cc  SensitiveDetector.cc
aplicacion5/: run.sh
aplicacion5/include/: SensitiveDetector.hh  SteppingAction.hh
aplicacion5/src/: DetConstruction.cc  PrimaryGenAction.cc  SensitiveDetector.cc
aplicacion6/: CMakeLists.txt  run.sh
aplicacion6/include/: DetConstruction.hh
aplicacion6/src/: DetConstruction.cc  (+2 more)
app/aplicacion5/: CMakeLists.txt  run.sh
app/aplicacion5/include/: ActionInit.hh  PrimaryGenAction.hh
app/aplicacion5/src/: ActionInit.cc  DetConstruction.cc  PrimaryGenAction.cc
fotos/: docfotos.odt
output_processor/: analisis_proporcion.py  cleanheaders.py  compare_counts.py  process_counts.py  process_times.py
particlegen/: genemptyoutput.py  input_particles.csv  input_particles2.csv  input_particles3.csv  neutrontoproton.py  particlegen.py
processed_output/: compare_counts.py  process_counts.py  process_fracs.py  process_particle_counts.py  process_times.py
(+3390 files in other folders)
